--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,134 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+html {
+    font-size: 3vmin;
+}
+
+
+body {
+    background-color: #0B0708;
+    color: #fff;
+    font-family: 'Raleway', sans-serif;
+}
+
+/* Header */
+header {
+    display: flex;
+    flex-direction: column;
+    height: 65vh;
+    padding: 0 1rem;
+    background-image: url(background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+
+}
+
+.top-bar {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.4rem;
+}
+
+.logo {
+    color: #ff9a62;
+    font-weight: 600;
+    }
+
+svg, .logo>span {
+  vertical-align: middle;
+  display: inline-block;
+}
+
+svg {
+    height: 1.3rem;
+    width: 1.3rem;
+}
+
+
+nav ul li {
+    display: inline-block;
+    Padding: 0 0.5rem;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    color:#ff9a62;
+}
+
+
+.headline {display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    margin-top: 14rem;
+}
+
+
+h1 {
+    font-size: 2.3rem;
+    background-color: #0b07086a;
+      }
+
+/* Buttons */
+
+button {
+   /*width: 10rem;*/
+   color: #fff;
+   border-radius: 5px;
+   border: none;
+   background-color: #01759ced;
+   cursor: pointer;
+   font-size: 1.6rem;
+   font-weight: 500;
+   padding: 15px 40px;
+   font-family: 'Raleway', sans-serif;
+}
+
+button:hover {
+    background-color: #01759cc4;
+}
+
+/*Main*/
+
+select {/* Dropdown */
+    background-color:#0B0708;
+    color: #fff;
+    border: none;
+    padding: 15px;
+    width: 300px;
+    font-size: 1.3rem;
+    font-family: 'Raleway', sans-serif;
+    border-radius: 5px;
+}
+.selection-bar {
+    display: flex;
+    row-gap: 40px;
+    column-gap: 70px;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 0 20px;
+
+}
+
+#filters {
+    text-decoration: underline;
+    align-self: center;
+    cursor: pointer;
+}
+#filters:hover {
+    color: #ffffffd1;
+}
+
+
+@media screen and (min-width: 650px) {
+    .selection-bar {
+        margin-top: 70px;
+}}
