--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
 }
+
 html {
     font-size: 3vmin;
 }
@@ -37,11 +38,12 @@ header {
 .logo {
     color: #ff9a62;
     font-weight: 600;
-    }
+}
 
-svg, .logo>span {
-  vertical-align: middle;
-  display: inline-block;
+svg,
+.logo>span {
+    vertical-align: middle;
+    display: inline-block;
 }
 
 svg {
@@ -61,35 +63,36 @@ a {
 }
 
 a:hover {
-    color:#ff9a62;
+    color: #ff9a62;
 }
 
 
-.headline {display: flex;
+.headline {
+    display: flex;
     align-items: flex-end;
     justify-content: center;
     margin-top: 14rem;
 }
 
 
-h1 {
+.headline >h1 {
     font-size: 2.3rem;
     background-color: #0b07086a;
-      }
+}
 
 /* Buttons */
 
 button {
-   /*width: 10rem;*/
-   color: #fff;
-   border-radius: 5px;
-   border: none;
-   background-color: #01759ced;
-   cursor: pointer;
-   font-size: 1.6rem;
-   font-weight: 500;
-   padding: 15px 40px;
-   font-family: 'Raleway', sans-serif;
+    /*width: 10rem;*/
+    color: #fff;
+    border-radius: 5px;
+    border: none;
+    background-color: #01759ced;
+    cursor: pointer;
+    font-size: 1.6rem;
+    font-weight: 500;
+    padding: 15px 40px;
+    font-family: 'Raleway', sans-serif;
 }
 
 button:hover {
@@ -98,14 +101,17 @@ button:hover {
 
 /*Main*/
 
-select {/* Dropdown */
-    background-color:#0B0708;
+select {
+    /* Dropdown */
+    background-color: #0B0708;
     color: #fff;
     border: none;
     width: 300px;
     border-radius: 5px;
 }
-.selection-bar, #filter-options {
+
+.selection-bar,
+#filter-options {
     display: flex;
     row-gap: 40px;
     column-gap: 70px;
@@ -114,19 +120,24 @@ select {/* Dropdown */
     padding: 0 20px;
 
 }
+
 /* Styling filtering options */
-select, label {
+select,
+label {
     font-size: 1.3rem;
     font-family: 'Raleway', sans-serif;
     padding: 15px;
 }
 
-#filters, #hide-filters {
+#filters,
+#hide-filters {
     text-decoration: underline;
     align-self: center;
     cursor: pointer;
 }
-#filters:hover, #hide-filters:hover {
+
+#filters:hover,
+#hide-filters:hover {
     color: #ffffffd1;
 }
 
@@ -140,34 +151,33 @@ select, label {
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
-    appearance: none; 
-  margin: 0;
+    appearance: none;
+    margin: 0;
 }
 
 input[type=number] {
--moz-appearance: textfield;
-  text-align: center;
-  border: none;
-  margin: 0;
-  width: 110px;
-  height: 1.5rem;
-  padding: 20px 20px;
-  background-color:#0B0708;
-  border: 2px solid #fff;
-  color: #fff;
-  font-size: 1.3rem;
-  font-family: sans-serif;
-margin-left: 20px;
+    -moz-appearance: textfield;
+    text-align: center;
+    border: none;
+    margin: 0;
+    width: 110px;
+    height: 1.5rem;
+    padding: 20px 20px;
+    background-color: #0B0708;
+    border: 2px solid #fff;
+    color: #fff;
+    font-size: 1.3rem;
+    font-family: sans-serif;
+    margin-left: 20px;
 }
 
 /* Custom checkbox */
-input[type=checkbox]:focus
-{
-    outline: 1px solid #fff;;
+input[type=checkbox]:focus {
+    outline: 1px solid #fff;
+    ;
 }
 
-input[type=checkbox]
-{
+input[type=checkbox] {
     background-color: #0B0708;
     border: 2px solid #fff;
     border-radius: 2px;
@@ -182,28 +192,64 @@ input[type=checkbox]
     margin-left: 20px;
 }
 
-input[type=checkbox]:checked
-{
+input[type=checkbox]:checked {
     background: #01759ced url('check.png') center;
 }
 
+/* Styling cards with film suggestions */
+
+#films {
+    width: 90%;
+    margin: 70px auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    column-gap: 70px;
+    row-gap: 40px;
+    font-family: sans-serif;
+    
+}
+.film {width: 300px;
+   /*background-color: #3e3c3d6e;*/
+
+}
+
+.film >h1 {
+    font-size: 1rem;
+    margin-top: 1rem;
+}
+
+.film >p {color: #aaa9a9;
+
+}
+
+.genre-name {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 1rem;
+}
 
 /* Adjustments to screen sizes */
 @media screen and (min-width: 650px) {
     .selection-bar {
         margin-top: 70px;
-}}
+    }
+}
 
 @media screen and (max-width: 480px) {
     html {
         font-size: 4vmin;
     }
 
-    h1 {font-size: 1.5rem;}
+    .headline >h1 {
+        font-size: 1.5rem;
+    }
+
     input[type=number] {
         width: 70px;
         padding: 10px 10px;
     }
+
     input[type=checkbox] {
         width: 20px;
 
